Add exception to the methods